# swagger/goshorturl.json
@@ -15,7 +15,7 @@
     "application/json"
   ],
   "paths": {
-    "/api/v1/shorturl/access": {
+    "/api/v1/shorturl/access/{url}": {
       "get": {
         "operationId": "AccessShortUrlHandler",
         "responses": {
@@ -29,16 +29,13 @@
         "parameters": [
           {
             "name": "url",
-            "in": "query",
+            "in": "path",
             "required": true,
             "type": "string"
           }
         ],
         "tags": [
           "shorturl"
-        ],
-        "consumes": [
-          "multipart/form-data"
         ]
       }
     },
@@ -81,9 +78,16 @@
         },
         "parameters": [
           {
+            "name": "id",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "uint32"
+          },
+          {
             "name": "url",
             "in": "query",
-            "required": true,
+            "required": false,
             "type": "string"
           }
         ],
@@ -125,15 +129,7 @@
   "definitions": {
     "AccessShortUrlRequest": {
       "type": "object",
-      "properties": {
-        "url": {
-          "type": "string"
-        }
-      },
-      "title": "AccessShortUrlRequest",
-      "required": [
-        "url"
-      ]
+      "title": "AccessShortUrlRequest"
     },
     "AccessShortUrlResponse": {
       "type": "object",
@@ -144,7 +140,7 @@
       "properties": {
         "id": {
           "type": "integer",
-          "format": "int32"
+          "format": "uint32"
         },
         "url": {
           "type": "string"
@@ -180,21 +176,22 @@
     "DetailShortUrlRequest": {
       "type": "object",
       "properties": {
+        "id": {
+          "type": "integer",
+          "format": "uint32"
+        },
         "url": {
           "type": "string"
         }
       },
-      "title": "DetailShortUrlRequest",
-      "required": [
-        "url"
-      ]
+      "title": "DetailShortUrlRequest"
     },
     "DetailShortUrlResponse": {
       "type": "object",
       "properties": {
         "id": {
           "type": "integer",
-          "format": "int32"
+          "format": "uint32"
         },
         "url": {
           "type": "string"
@@ -207,6 +204,9 @@
         },
         "expire_at": {
           "type": "string"
+        },
+        "created_at": {
+          "type": "string"
         }
       },
       "title": "DetailShortUrlResponse",
@@ -215,33 +215,33 @@
         "url",
         "origin",
         "description",
-        "expire_at"
+        "expire_at",
+        "created_at"
       ]
     },
     "UpdateShortUrlRequest": {
       "type": "object",
-      "title": "UpdateShortUrlRequest"
-    },
-    "UpdateShortUrlResponse": {
-      "type": "object",
       "properties": {
         "id": {
           "type": "integer",
-          "format": "int32"
+          "format": "uint32"
         },
         "description": {
           "type": "string"
         },
         "expire_at": {
-          "type": "string"
+          "type": "string",
+          "description": " ISO 8601 格式 格式: \"2023-08-15T14:30:00+08:00\""
         }
       },
-      "title": "UpdateShortUrlResponse",
+      "title": "UpdateShortUrlRequest",
       "required": [
-        "id",
-        "description",
-        "expire_at"
+        "id"
       ]
+    },
+    "UpdateShortUrlResponse": {
+      "type": "object",
+      "title": "UpdateShortUrlResponse"
     }
   },
   "securityDefinitions": {
